objects/DMAPP__DM_Market_View_Plan_Row__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Account_Plan__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Account Plan</label>
        <referenceTo>DMAPP__DM_Account_Plan__c</referenceTo>
        <relationshipLabel>Market View Report Rows</relationshipLabel>
        <relationshipName>Account_Plan</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Market_View_Report__c</fullName>
        <label>Market View Report</label>
        <referenceTo>DMAPP__DM_Market_View_Report__c</referenceTo>
        <relationshipLabel>Market View Plan Rows</relationshipLabel>
        <relationshipName>Market_View_Report</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Market View Plan Row</label>
    <nameField>
        <label>Market View Plan Row Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market View Plan Rows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>